// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayerAvatar /> doesnt show fascist avatar, owner icon, waited for icon, dead classname for minimum data 1`] = `
<div
  className="avatarWrapper mockClassName"
>
  <img
    alt="Player liberal avatar"
    className="portrait"
    src="test-file-stub"
  />
  <PlayerRole
    role="ROLE_CHANCELLOR"
  />
</div>
`;

exports[`<PlayerAvatar /> doesnt show role ribbon if user is dead 1`] = `
<div
  className="avatarWrapper mockClassName dead"
>
  <img
    alt="Player liberal avatar"
    className="portrait"
    src="test-file-stub"
  />
</div>
`;

exports[`<PlayerAvatar /> returns null if liberalAvatarPicture doesnt exist 1`] = `null`;

exports[`<PlayerAvatar /> shows liberal avatar, fascist avatar, owner icon, waited for icon, dead classname and role ribbon for full data 1`] = `
<div
  className="avatarWrapper mockClassName dead"
>
  <Icon
    className="ownerIcon"
    name="fa-bolt"
  />
  <Icon
    className="selectingWaitIcon"
    name="fa-clock-o"
  />
  <img
    alt="Player fascist avatar"
    className="portrait fascistPortrait"
    src="test-file-stub"
  />
  <img
    alt="Player liberal avatar"
    className="portrait"
    src="test-file-stub"
  />
</div>
`;
